@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/main.c: Fix possible out-of-bounds array access.
+Andreas Kirschbaum 2005-11-05
+
 Fix case for [sg]etReturnValue. Add compare operator for object and map (of course
  only == is relevant).
 Modified files:
